--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lampa",
-  "version": "1.1.0",
+  "version": "1.4.1",
   "description": "Lampa Electron Fork",
   "main": "src/main.js",
   "scripts": {
@@ -13,7 +13,15 @@
   "author": "Barry",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^22.0.3",
-    "electron-builder": "^23.6.0"
+    "electron": "latest",
+    "electron-builder": "latest"
+  },
+  "build": {
+    "appId": "com.barry.lampa",
+    "productName": "Lampa",
+    "nsis": {
+      "allowToChangeInstallationDirectory": true,
+      "oneClick": false
+    }
   }
 }
